<resources>
    <string name="app_name">SwissKnife</string>

    <!-- Titulos -->

    <string name="tituloCalc">Calculadora</string>
    <string name="tituloAyuda">Ayuda</string>
    <string name="tituloLogin">Iniciar Sesión</string>
    <string name="tituloMediaPlayer">Reproductor</string>
    <string name="tituloPassword">Cambiar contraseña</string>
    <string name="tituloRegister">Añadir usuario</string>
    <string name="tituloHome">Inicio</string>
    <string name="tituloSettings">Ajustes</string>

    <string name="account">Cuenta</string>
    <string name="progress">Procesando...</string>
    <string name="welcome">Bienvenido a\nSwissKnife</string>

    <!-- Error Messages -->

    <string name="error1">"La contraseña actual no es correcta!"</string>
    <string name="error2">"Las contraseñas no coinciden!"</string>
    <string name="error3">"Datos incorrectos. Prueba con otro username o contraseña"</string>

    <!-- Notification -->
    <string name="notifDiv">"No puedes dividir entre 0!"</string>
    <string name="notifText">"El resultado es un NaN(Not a Number)!"</string>
    <string name="notifGame1">"Has acabado con "</string>
    <string name="notifGame2">" intentos"</string>

    <!-- Dialogos emergentes -->
    <string name="dialog1">"Nueva foto de perfil"</string>

    <!-- Login Fields -->
    <string name="user">"Usuario:"</string>
    <string name="passwd">"Contraseña:"</string>

    <!-- ChangeUser Fields -->
    <string name="oldPasswd">"Contraseña actual:"</string>
    <string name="newPasswd">"Nueva contraseña:"</string>
    <string name="newPasswd2">"Repita la nueva contraseña:"</string>

    <!-- Settings/Register Fields -->
    <string name="name">"Nombre:"</string>
    <string name="tutos">"Tutorial"</string>
    <string name="punct">"Puntuación:"</string>
    <string name="lnotif">"Última notificacion:"</string>
    <string name="address">"Dirección:"</string>
    <string name="intents">Puntuación:</string>

    <!-- RankingFragment Fields -->
    <string name="deleteUser">"Eliminar"</string>
    <string name="deleteUserText">"Seguro que quieres eliminar el usuario: "</string>

    <!-- Memory Fields -->
    <string name="finalPartida">"Fin de partida"</string>
    <string name="finalPartidaText">"Felicidades! Has ganado el juego.\nQuieres volver a jugar?"</string>
    <string name="novaPartida">"Nueva partida"</string>
    <string name="novaPartidaText">"Bienvenido a Memory\nElige una baraja y un tamaño de tablero"</string>
    <string name="barallaJEDI">"Fácil"</string>
    <string name="barallaJEDIprank">"Medio"</string>
    <string name="barallaSwissKnife">"Difícil"</string>
    <string name="btnStart">"Empezar"</string>
    <string name="btnSi">"Si"</string>
    <string name="btnNo">"No"</string>

    <!-- Buttons -->
    <string name="btnEnter">Entrar</string>
    <string name="btnChange">Cambiar</string>
    <string name="btnAddUser">Añadir usuario</string>
    <string name="btnChangePasswd">Cambiar contraseña</string>
    <string name="btnRegister">   Añadir</string>
    <string name="btnLogout">   Cerrar sesión</string>
    <string name="btnRetry">   Reintentar</string>

    <!-- Otros -->
    <string name="preAudio">Selecciona una canción</string>
    <string name="action_settings">Ajustes</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Cerrar menu</string>
    <string name="helpMemory">
        Memory es un juego que consiste en encontrar todas las parejas de cartas.\n
        Se empieza con todas las cartas hacia abajo, se destapa una, y se intenta adivinar donde esta su pareja.
        Si se falla, se vuelve a poner hacia abajo la anterior, y se siguen buscando parejas.\n
        Cuando una pareja se encuentra, se dejan las dos cartas hacia arriba.\n\n

        Para más información, visitar:\n
        <a href="https://es.wikipedia.org/wiki/Memoria_(juego)"> Wikipedia </a>.
    </string>
    <string name="helpRegister">
        Buenas, si eres el administrador procede con cuidado, y en caso contrario abandona la pantalla de registro.\n
        En esta pantalla podras registrar usuarios, tan solo introduciendo su <b>Nombre</b>,<b>direcció</b>,<b>nombre de usuario</b> y <b>contraseña</b>.\n
        Antes de registrar-lo, podras marcar si quieres que el usuario empieze con el tutorial (por defecto activo).
    </string>
    <string name="helpCalc">
        Esta no es una calculadora normal y corriente.\n\n
        ... Vale, si lo es, pero no solo es eso:\n
        Esta calculadora nos permitira tambien para llamar.\n
        ¡Prueba a pulsar el botón de llamada y descubrelo tu mismo!
    </string>
    <string name="helpRanking">
        Aquí podemos ver el ranking en el Memory de todos los jugadores inscritos en este dispositivo.
    </string>
    <string name="helpMediaPlayer">
        Este reproductor de musica te permitirá:\n\n

        <u>-Forward:</u> Lleva el audio al principio otra vez\n
        <u>-Play/Pausa:</u> Permite pausar la reproducción y retomarla en el punto donde la habias pausado\n
        <u>-Stop:</u> Detiene el audio y lo lleva al principio\n
        <u>-Loop:</u> Pone la reproducción en modo "Repetir", por lo que cuando el audio finaliza, vuelve a reproducirse\n
    </string>
    <string name="helpMenu">
        Esta es una aplicación para el curso de JEDI de Enero de 2016.\n\n

        A traves de ella se intentarà demostrar los conocimientos y el nivel de Android adquiridos gracias a este curso y el interes del alumno.
        Desde el menú podrás acceder a:\n\n

        <u>-Memory:</u> Accede al tipico juego de memory donde tendras que demostrar tu habilidad de memoria con cartas giradas.\n
        Para informacion y reglas del juego ver la ayuda de el juego.\n\n

        <u>-Ranking:</u> Este apartado del menú nos permite acceder  al ranking del juego donde podremos ver los resultados de todos los
        usuarios registrados en este dispositivo.\n\n

        <u>-Calculadora:</u> Este apartado del menú nos permite acceder a una calculadora convencional que ademas nos permite llamar
        a traves de la SIM de nuestro telefono.\n\n

        <u>-Cuenta:</u> Aqui podremos acceder a los <b>ajustes</b> y cerrar sesión.\n\n


        Para acceder a los <b>ajustes</b>, también podremos pulsar nuestra fotografia de perfil en el encabezado del menú.
    </string>
    <string name="helpSettings">
        En ajustes puedes ver toda tu información personal para verificarla.\n
        En caso de error o cambio en algun dato, habla con el administrador para modificarlo.\n\n

        El boton de <b>Cerrar sesión</b> te permitira cerrar la sesión para que nadie pueda acceder a tu cuenta ni información personal.
    </string>
    <string name="btnClose">Cerrar</string>
    <string name="spa">Español</string>
    <string name="cat">Catalan</string>
    <string name="en">Inglés</string>
    <string name="language">El idioma cambiará al cambiar de pantalla</string>
    <string name="tutoWelcome">Bienvenido, en esta pantalla veras que puede hacer SwissKnife.\nPara acceder a estas opciones, pulsa aquí</string>
    <string name="checkBoxText">No volver a mostrar</string>
    <string name="textTuto">Quieres acceder al tutorial de SwissKnife?</string>
    <string name="notifRegister">Usuario añadido correctamente!</string>
    <string name="notifPass">Contraseña cambiada correctamente!</string>
</resources>
